kubernetes/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: gitlab.praktikum-services.ru:5050/anton-borodinskiy/sausage-store/sausage-frontend:latest
          imagePullPolicy: Always
          volumeMounts:
          - name: nginx-conf
            mountPath: /etc/nginx/conf.d/
          ports:
            - name: frontend
              containerPort: 80
      imagePullSecrets:
        - name: docker-config-secret
      volumes:
      - name: nginx-conf
        configMap:
          name: frontend-configmap
